syntax = "proto3";

package order;

service OrderService {
  rpc PlaceOrder (PlaceOrderRequest) returns (OrderResponse) {}
  rpc TrackOrder (TrackOrderRequest) returns (stream TrackOrderResponse) {}
}

message PlaceOrderRequest {
  int32 userId = 1;
  repeated int32 productIds = 2;
}

message OrderResponse {
  int32 id = 1;
  int32 userId = 2;
  repeated int32 productIds = 3;
  string status = 4;
}

message TrackOrderRequest {
  int32 orderId = 1;
}

message TrackOrderResponse {
  string status = 1;
  string timestamp = 2;
}