syntax = "proto3";

package product;

service ProductService {
  rpc CreateProduct (CreateProductRequest) returns (ProductResponse) {}
  rpc GetProduct (GetProductRequest) returns (ProductResponse) {}
  rpc UpdateProduct (UpdateProductRequest) returns (ProductResponse) {}
  rpc DeleteProduct (DeleteProductRequest) returns (DeleteProductResponse) {}
  rpc BulkCreateProducts (stream CreateProductRequest) returns (BulkCreateProductsResponse) {}
}

message CreateProductRequest {
  string name = 1;
  string description = 2;
  double price = 3;
  int32 stock = 4;
}

message GetProductRequest {
  int32 id = 1;
}

message UpdateProductRequest {
  int32 id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int32 stock = 5;
}

message DeleteProductRequest {
  int32 id = 1;
}

message ProductResponse {
  int32 id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int32 stock = 5;
}

message DeleteProductResponse {
  string message = 1;
}

message BulkCreateProductsResponse {
  int32 createdCount = 1;
}